# MarketSage

./: .gitignore  .replit  pyproject.toml  replit.nix
config/: config.toml  data_config.csv  other.txt
data/: data_filled.csv  data_raw.csv  pmi.csv
model/: model.joblib
src/: config_reader.py  data_fetcher.py  data_processor.py  data_raw_post_processor.py  file_handler.py  main.py  publisher.py  trainer.py  util.py
src/data_sources/: base_data_source.py  bls_data_source.py  fred_data_source.py  multpl_data_source.py  other_data_source.py  yfinance_data_source.py
