[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12.0"
pandas = "^2.2.2"
yfinance = "^0.2.41"
pandas-datareader = "^0.10.0"
toml = "^0.10.2"
config = "^0.5.1"
scikit-learn = "^1.5.1"
boto3 = "^1.34.153"
joblib = "^1.4.2"
lightgbm = "^4.5.0"
setuptools = "^72.1.0"
shap = "^0.46.0"
anthropic = "^0.32.0"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"